@@ -1,6 +1,7 @@
 = 1.4.0 =
 [Added] AJAX loading the plugins list when empty or refreshing list.
 [Added] CRON daily event to check for new plugins/updates.
+[Added] Full integration with CP's new Directory API (plugins only).
 [Fixed] Missing (if available) GitHub Authentication when requesting readme.* files.
 
 = 1.3.1 =
